@@ -11,6 +11,7 @@ version 1.00:
 	- add ellipsis modifier
 	- add chop modifier
 	- add defaults configuration
+	- better document encodeFor()
 
 version 0.96: Fri 12 Sep 14:01:16 CEST 2025
 
